Change upload logic.
