# src/Request/User/ChangeAvatarRequest.php
@@ -7,18 +7,13 @@ use Symfony\Component\Validator\Constraints as Assert;
 
 class ChangeAvatarRequest extends RequestObject
 {
-    public const UPLOADS = ['imagefile'];
+    public const UPLOADS = ['avatar'];
 
     /**
      * @Assert\File(
      *     maxSize="1024k",
      *     mimeTypes={"image/jpeg", "image/png"}
      * )
-     */
-    public $imagefile;
-
-    /**
-     * @var string
      */
     public $avatar;
 }
